// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Void Logion Identity LOCs 1`] = `
<div
  className="Table"
>
  <style>
    
            .Table .body .Row .Col.split-after::before {
                background-color: #152665;
            }
            
  </style>
  <div
    className="header"
    style={
      Object {
        "backgroundColor": "#0c163d",
        "color": "#ffffff",
      }
    }
  >
    <div
      className="Row"
    >
      <div
        className="Col"
        style={
          Object {
            "textAlign": "left",
            "width": "calc(( 100% - 740px ) / 3)",
          }
        }
      >
        Requester
      </div>
      <div
        className="Col"
        style={
          Object {
            "textAlign": "left",
            "width": "calc(( 100% - 740px ) / 3)",
          }
        }
      >
        Description
      </div>
      <div
        className="Col"
        style={
          Object {
            "textAlign": "center",
            "width": "140px",
          }
        }
      >
        Status
      </div>
      <div
        className="Col"
        style={
          Object {
            "textAlign": "left",
            "width": "calc(( 100% - 740px ) / 3)",
          }
        }
      >
        LOC ID
      </div>
      <div
        className="Col"
        style={
          Object {
            "textAlign": "center",
            "width": "200px",
          }
        }
      >
        Creation date
      </div>
      <div
        className="Col"
        style={
          Object {
            "textAlign": "center",
            "width": "200px",
          }
        }
      >
        Voiding date
      </div>
      <div
        className="Col"
        style={
          Object {
            "textAlign": "center",
            "width": "200px",
          }
        }
      >
        Action
      </div>
    </div>
  </div>
  <div
    className="body"
  >
    <div
      className="Row "
      style={
        Object {
          "color": "#ffffff",
        }
      }
    >
      <div
        className="Col"
        style={
          Object {
            "backgroundColor": "#152665",
            "fontSize": undefined,
            "textAlign": "left",
            "width": "calc(( 100% - 740px ) / 3)",
          }
        }
      >
        <div
          className="regular-cell"
          style={Object {}}
        >
          Scott Tiger
        </div>
      </div>
      <div
        className="Col"
        style={
          Object {
            "backgroundColor": "#152665",
            "fontSize": undefined,
            "textAlign": "left",
            "width": "calc(( 100% - 740px ) / 3)",
          }
        }
      >
        <div
          className="regular-cell overflowing"
          style={Object {}}
        >
          <span
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            LOC description
          </span>
        </div>
      </div>
      <div
        className="Col"
        style={
          Object {
            "backgroundColor": "#152665",
            "fontSize": undefined,
            "textAlign": "center",
            "width": "140px",
          }
        }
      >
        <span
          className="StatusCell"
          style={
            Object {
              "borderColor": "#e11a25",
            }
          }
        >
          <img
            alt=""
            height="20px"
            src="/assets/void.svg"
          />
           
          <span
            style={
              Object {
                "color": "#e11a25",
                "textTransform": undefined,
              }
            }
          >
            VOID
          </span>
        </span>
      </div>
      <div
        className="Col"
        style={
          Object {
            "backgroundColor": "#152665",
            "fontSize": undefined,
            "textAlign": "left",
            "width": "calc(( 100% - 740px ) / 3)",
          }
        }
      >
        <div
          className="Row"
        >
          <div
            className="regular-cell overflowing"
            style={Object {}}
          >
            <span
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              113562046143451386440596991937339789764
            </span>
          </div>
          <button
            className="Button CopyPasteButton medium btn btn-primary"
            disabled={false}
            onClick={[Function]}
            style={Object {}}
            type="button"
          >
            <img
              alt=""
              src="/assets/copy_paste.svg"
            />
          </button>
        </div>
      </div>
      <div
        className="Col"
        style={
          Object {
            "backgroundColor": "#152665",
            "fontSize": undefined,
            "textAlign": "center",
            "width": "200px",
          }
        }
      >
        <div
          className="regular-cell"
          style={
            Object {
              "textAlign": "center",
            }
          }
        >
          -
        </div>
      </div>
      <div
        className="Col"
        style={
          Object {
            "backgroundColor": "#152665",
            "fontSize": undefined,
            "textAlign": "center",
            "width": "200px",
          }
        }
      >
        <div
          className="spinner-border"
        />
      </div>
      <div
        className="Col"
        style={
          Object {
            "backgroundColor": "#152665",
            "fontSize": undefined,
            "textAlign": "center",
            "width": "200px",
          }
        }
      >
        <div
          className="action-cell"
        >
          <div
            className="ButtonGroup"
          >
            <div
              className="btn-group"
              role="group"
            >
              <button
                className="Button btn btn-primary"
                disabled={false}
                onClick={[Function]}
                style={Object {}}
                type="button"
              >
                View
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders Void Polkadot Identity LOCs 1`] = `
<div
  className="Table"
>
  <style>
    
            .Table .body .Row .Col.split-after::before {
                background-color: #152665;
            }
            
  </style>
  <div
    className="header"
    style={
      Object {
        "backgroundColor": "#0c163d",
        "color": "#ffffff",
      }
    }
  >
    <div
      className="Row"
    >
      <div
        className="Col"
        style={
          Object {
            "textAlign": "left",
            "width": "calc(( 100% - 740px ) / 3)",
          }
        }
      >
        Requester
      </div>
      <div
        className="Col"
        style={
          Object {
            "textAlign": "left",
            "width": "calc(( 100% - 740px ) / 3)",
          }
        }
      >
        Description
      </div>
      <div
        className="Col"
        style={
          Object {
            "textAlign": "center",
            "width": "140px",
          }
        }
      >
        Status
      </div>
      <div
        className="Col"
        style={
          Object {
            "textAlign": "left",
            "width": "calc(( 100% - 740px ) / 3)",
          }
        }
      >
        LOC ID
      </div>
      <div
        className="Col"
        style={
          Object {
            "textAlign": "center",
            "width": "200px",
          }
        }
      >
        Creation date
      </div>
      <div
        className="Col"
        style={
          Object {
            "textAlign": "center",
            "width": "200px",
          }
        }
      >
        Voiding date
      </div>
      <div
        className="Col"
        style={
          Object {
            "textAlign": "center",
            "width": "200px",
          }
        }
      >
        Action
      </div>
    </div>
  </div>
  <div
    className="body"
  >
    <div
      className="Row "
      style={
        Object {
          "color": "#ffffff",
        }
      }
    >
      <div
        className="Col"
        style={
          Object {
            "backgroundColor": "#152665",
            "fontSize": undefined,
            "textAlign": "left",
            "width": "calc(( 100% - 740px ) / 3)",
          }
        }
      >
        <div
          className="regular-cell"
          style={Object {}}
        >
          John Doe
        </div>
      </div>
      <div
        className="Col"
        style={
          Object {
            "backgroundColor": "#152665",
            "fontSize": undefined,
            "textAlign": "left",
            "width": "calc(( 100% - 740px ) / 3)",
          }
        }
      >
        <div
          className="regular-cell overflowing"
          style={Object {}}
        >
          <span
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            LOC description
          </span>
        </div>
      </div>
      <div
        className="Col"
        style={
          Object {
            "backgroundColor": "#152665",
            "fontSize": undefined,
            "textAlign": "center",
            "width": "140px",
          }
        }
      >
        <span
          className="StatusCell"
          style={
            Object {
              "borderColor": "#e11a25",
            }
          }
        >
          <img
            alt=""
            height="20px"
            src="/assets/void.svg"
          />
           
          <span
            style={
              Object {
                "color": "#e11a25",
                "textTransform": undefined,
              }
            }
          >
            VOID
          </span>
        </span>
      </div>
      <div
        className="Col"
        style={
          Object {
            "backgroundColor": "#152665",
            "fontSize": undefined,
            "textAlign": "left",
            "width": "calc(( 100% - 740px ) / 3)",
          }
        }
      >
        <div
          className="Row"
        >
          <div
            className="regular-cell overflowing"
            style={Object {}}
          >
            <span
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              113562046143451386440596991937339789764
            </span>
          </div>
          <button
            className="Button CopyPasteButton medium btn btn-primary"
            disabled={false}
            onClick={[Function]}
            style={Object {}}
            type="button"
          >
            <img
              alt=""
              src="/assets/copy_paste.svg"
            />
          </button>
        </div>
      </div>
      <div
        className="Col"
        style={
          Object {
            "backgroundColor": "#152665",
            "fontSize": undefined,
            "textAlign": "center",
            "width": "200px",
          }
        }
      >
        <div
          className="regular-cell"
          style={
            Object {
              "textAlign": "center",
            }
          }
        >
          -
        </div>
      </div>
      <div
        className="Col"
        style={
          Object {
            "backgroundColor": "#152665",
            "fontSize": undefined,
            "textAlign": "center",
            "width": "200px",
          }
        }
      >
        <div
          className="spinner-border"
        />
      </div>
      <div
        className="Col"
        style={
          Object {
            "backgroundColor": "#152665",
            "fontSize": undefined,
            "textAlign": "center",
            "width": "200px",
          }
        }
      >
        <div
          className="action-cell"
        >
          <div
            className="ButtonGroup"
          >
            <div
              className="btn-group"
              role="group"
            >
              <button
                className="Button btn btn-primary"
                disabled={false}
                onClick={[Function]}
                style={Object {}}
                type="button"
              >
                View
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders null with no data 1`] = `null`;
